--- a/assets/jt/jt.html
+++ b/assets/jt/jt.html
@@ -20,7 +20,7 @@
 [% END %]
 
 [% BLOCK item_list_item %]
-<li>
+<li id="item-list-item-[% name %]">
     <img src="[% uri %]/item/[% name %]/thumbnail.jpg">
 </li>
 [% END %]
